--- a/static/css/util.css
+++ b/static/css/util.css
@@ -144,7 +144,7 @@
     width: 50px;
     height: 50px;
     line-height: 55px;
-    background-color: #333;
+    background-color: rgba(0, 0, 0, 0.75);
     text-align: center;
     color: #fff;
     border: 1px solid #fff;
@@ -174,7 +174,7 @@
 .loading-wrap{
     width:100%;
     height:100%;
-    background-color:#181f25;
+    background-color:#000;
     filter:alpha(opacity=95);
     -moz-opacity:0.95;
     opacity:0.95;
@@ -216,7 +216,7 @@ body .color-picker-wrap {
 body .color-picker-wrap.visible-color-wrap {
     left: 0; }
 body .col-trigger {
-    background: #288feb;
+    background: rgba(0, 0, 0, 0.75);
     color: #fff;
     border-radius: 0 5px 5px 0;
     cursor: pointer;
@@ -224,7 +224,7 @@ body .col-trigger {
     height: 40px;
     line-height: 40px;
     position: absolute;
-    right: -40px;
+    right: -41px;
     text-align: center;
     top: 14px;
     width: 40px;
