--- a/static/resume/resume001_/css/response.css
+++ b/static/resume/resume001_/css/response.css
@@ -111,13 +111,13 @@
         width: 50%;
         float: left;
         text-align: right;
-        margin-top: 35px;
+        margin-top: 10px;
     }
     .itemRight{
         width: 50%;
         float: left;
         padding-left: 15px;
-        margin-top: 35px;
+        margin-top: 10px;
         padding-top: 35px;
         border-left:1px solid #999999;
     }
@@ -125,7 +125,7 @@
     .itemLeft2{
         width: 50%;
         float: left;
-        margin-top: 35px;
+        margin-top: 10px;
         padding-right: 15px;
         text-align: right;
         padding-top: 35px;
@@ -139,9 +139,14 @@
         margin-top: 14px;
     }
 
-    .itemBottom p{
+    .itemBottom{
         float: left;
-        margin-top: 25px;
+        display: block;
+        width: 100%;
+        margin-top: 8px;
+        padding: 15px;
+        text-align: left;
+        border-top: 1px solid #999999;
     }
 
 
@@ -150,9 +155,9 @@
         color:#fff;
         font-size: 14px;
         display: inline-block;
-        padding: 8px 18px;
+        padding: 8px 10px;
         white-space: nowrap;
-        margin-right: -5px;
+        margin-right: -4px;
     }
 
     .itemDate2{
@@ -160,12 +165,11 @@
         color:#fff;
         font-size: 14px;
         display: inline-block;
-        padding: 8px 18px;
+        padding: 8px 10px;
         white-space: nowrap;
-        margin-left: -5px;
-        margin-top: 20px;
+        margin-left: -4px;
+        margin-top: -5px;
     }
-
 
 
     .itemLeft .cusp01 {
