--- a/views/resume/resume001_.html
+++ b/views/resume/resume001_.html
@@ -245,11 +245,27 @@
             <h3>专业技能</h3>
             <hr>
             <div class="wthreeskills-grids" >
-                <div class="col-sm-8 col-md-offset-2" style="border: 0px solid red;">
+                <div class="col-sm-8 col-md-offset-2" style="border: 0px solid red;margin-top: 70px;">
                     <div class="skillst showSkillWrap">
-                        <div class="skillbar" data-percent="78%">
+                        <div class="skillbar" data-percent="85%">
                             <div class="title head-sm">
-                                HTML 5
+                                摄影师证书
+                            </div>
+                            <div class="count-bar">
+                                <div class="count"></div>
+                            </div>
+                        </div>
+                        <div class="skillbar" data-percent="100%">
+                            <div class="title head-sm">
+                                英语四级证书
+                            </div>
+                            <div class="count-bar">
+                                <div class="count"></div>
+                            </div>
+                        </div>
+                        <div class="skillbar" data-percent="95%">
+                            <div class="title head-sm">
+                                普通话二级甲等
                             </div>
                             <div class="count-bar">
                                 <div class="count"></div>
@@ -285,21 +301,26 @@
             <div class="pcWrap4edu" style="border: 0px solid red;">
                 <div class="work-info">
                     <div class="col-md-6 work-grid work-left">
-                        <h4>2007-2009</h4>
+                        <h4>2005.08-2009.12</h4>
                     </div>
                     <div class="col-md-6 work-grid work-right">
-                        <h5 class="univ">Post Graduate</h5>
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo </p>
+                        <h5 class="univ">清华大学</h5>
+                        <p>
+                            主修课程：
+                            传统动画原理，角色设计，场景设计，广告设计，视听语言，表演，脚本创作，影视场景建模，三维角色动画，影视材质特效等。素描、色彩、平面构成、色彩构成立体构成、图案、电脑平面设计、电脑三维设计、多媒体技术合成，电脑绘画，电脑三维绘画。
+                        </p>
                     </div>
                     <div class="clearfix"> </div>
                 </div>
                 <div class="work-info">
                     <div class="col-md-6 work-grid work-right work-right2">
-                        <h4>2003-2007</h4>
+                        <h4>2009.11-2011.06</h4>
                     </div>
                     <div class="col-md-6 work-grid work-left work-left2">
-                        <h5>Graduate</h5>
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo </p>
+                        <h5>哈佛大学</h5>
+                        <p>
+                            主修课程：
+                            传统动画原理，角色设计，场景设计，广告设计，视听语言，表演，脚本创作，影视场景建模，三维角色动画，影视材质特效等。素描、色彩、平面构成、色彩构成立体构成、图案、电脑平面设计、电脑三维设计、多媒体技术合成，电脑绘画，电脑三维绘画。                        </p>
                     </div>
                     <div class="clearfix"> </div>
                 </div>
@@ -308,31 +329,36 @@
                 <div class="item">
                     <div class="itemLeft" style="">
                         <div class="itemDate">
-                            2007.08-2009.12
+                            2005.08-2009.12
                         </div>
                         <div class="cusp01"><div class="cusp02"></div></div>
                     </div>
                     <div class="itemRight" >
                         <div>
-                            <h4>广州番禺</h4>
+                            <h4>清华大学</h4>
                         </div>
                     </div>
                     <div class="itemBottom">
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo</p>
+                        <p>
+                            主修课程：<br>
+                            传统动画原理，角色设计，场景设计，广告设计，视听语言，表演，脚本创作，影视场景建模，三维角色动画，影视材质特效等。素描、色彩、平面构成、色彩构成立体构成、图案、电脑平面设计、电脑三维设计、多媒体技术合成，电脑绘画，电脑三维绘画。
+                        </p>
                     </div>
                 </div>
                 <div class="item">
                     <div class="itemLeft2">
-                        <h4>广州番禺职业技术学院</h4>
+                        <h4>哈佛大学</h4>
                     </div>
                     <div class="itemRight2" >
                         <div class="cusp01"><div class="cusp02"></div></div>
                         <div class="itemDate2">
-                            2007.11-2009.06
+                            2009.11-2011.06
                         </div>
                     </div>
                     <div class="itemBottom">
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo</p>
+                        <p>
+                            主修课程：<br>
+                            传统动画原理，角色设计，场景设计，广告设计，视听语言，表演，脚本创作，影视场景建模，三维角色动画，影视材质特效等。素描、色彩、平面构成、色彩构成立体构成、图案、电脑平面设计、电脑三维设计、多媒体技术合成，电脑绘画，电脑三维绘画。                        </p>
                     </div>
                 </div>
             </div>
@@ -351,25 +377,55 @@
             <div class="pcWrap4work" style="border: 0px solid red;">
                 <div class="work-info">
                     <div class="col-md-6 work-grid work-left">
-                        <h4>2007-2009</h4>
+                        <h4>2016.01-2018.12</h4>
                     </div>
                     <div class="col-md-6 work-grid work-right">
-                        <h5 class="univ">Post Graduate</h5>
+                        <h5 class="univ">才华有限公司</h5>
                         <br>
-                        <p style="font-size: 18px;font-weight: 500;" class="univ">Post Graduate</p>
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo </p>
+                        <p style="font-size: 18px;font-weight: 500;" class="univ">影视设计师</p>
+                        <p>
+                            根据拍摄人物，制定详细的拍摄工作计划与时间安排；<br>
+                            根据工作需要，挑选合适的摄影设备；<br>
+                            根据导演要求，运用摄影艺术手段完成影视片的电影造型；<br>
+                            在完成拍摄任务的整个过程中，与拍摄小组其他成员紧密协作；<br>
+                            与被拍摄者沟通，以达到快速进入拍摄状态的效果。
+                        </p>
                     </div>
                     <div class="clearfix"> </div>
                 </div>
                 <div class="work-info">
                     <div class="col-md-6 work-grid work-right work-right2">
-                        <h4>2003-2007</h4>
+                        <h4>2014.01-2016.01</h4>
                     </div>
                     <div class="col-md-6 work-grid work-left work-left2">
-                        <h5>Graduate</h5>
+                        <h5>才华有限公司</h5>
                         <br>
-                        <p style="font-size: 18px;font-weight: 500;" class="univ">Post Graduate</p>
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo </p>
+                        <p style="font-size: 18px;font-weight: 500;" class="univ">影视设计师</p>
+                        <p>
+                            根据拍摄人物，制定详细的拍摄工作计划与时间安排；
+                            根据工作需要，挑选合适的摄影设备；
+                            根据导演要求，运用摄影艺术手段完成影视片的电影造型；
+                            在完成拍摄任务的整个过程中，与拍摄小组其他成员紧密协作；
+                            与被拍摄者沟通，以达到快速进入拍摄状态的效果。
+                        </p>
+                    </div>
+                    <div class="clearfix"> </div>
+                </div>
+                <div class="work-info">
+                    <div class="col-md-6 work-grid work-left">
+                        <h4>2012.01-2013.12</h4>
+                    </div>
+                    <div class="col-md-6 work-grid work-right">
+                        <h5 class="univ">才华有限公司</h5>
+                        <br>
+                        <p style="font-size: 18px;font-weight: 500;" class="univ">影视设计师</p>
+                        <p>
+                            根据拍摄人物，制定详细的拍摄工作计划与时间安排；
+                            根据工作需要，挑选合适的摄影设备；
+                            根据导演要求，运用摄影艺术手段完成影视片的电影造型；
+                            在完成拍摄任务的整个过程中，与拍摄小组其他成员紧密协作；
+                            与被拍摄者沟通，以达到快速进入拍摄状态的效果。
+                        </p>
                     </div>
                     <div class="clearfix"> </div>
                 </div>
@@ -378,33 +434,68 @@
                 <div class="item">
                     <div class="itemLeft" style="">
                         <div class="itemDate">
-                            2007.08-2009.12
+                            2016.01-2018.12
                         </div>
                         <div class="cusp01"><div class="cusp02"></div></div>
                     </div>
                     <div class="itemRight" >
                         <div>
-                            <h4>广州番禺</h4>
-                            <h5 style="margin-top: 6px">JavaWeb 开发工程师</h5>
+                            <h4>才华有限公司</h4>
+                            <h5 style="margin-top: 6px">设计师</h5>
                         </div>
                     </div>
                     <div class="itemBottom">
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo</p>
+                        <p>
+                            根据拍摄人物，制定详细的拍摄工作计划与时间安排；<br>
+                            根据工作需要，挑选合适的摄影设备；<br>
+                            根据导演要求，运用摄影艺术手段完成影视片的电影造型；<br>
+                            在完成拍摄任务的整个过程中，与拍摄小组其他成员紧密协作；<br>
+                            与被拍摄者沟通，以达到快速进入拍摄状态的效果。
+                        </p>
                     </div>
                 </div>
                 <div class="item">
                     <div class="itemLeft2">
-                        <h4>广州番禺职业技术学院</h4>
-                        <h5 style="margin-top: 6px">JavaWeb 开发工程师</h5>
+                        <h4>才华有限公司</h4>
+                        <h5 style="margin-top: 6px">首席设计师</h5>
                     </div>
                     <div class="itemRight2" >
                         <div class="cusp01"><div class="cusp02"></div></div>
                         <div class="itemDate2">
-                            2007.11-2009.06
+                            2014.01-2016.01
                         </div>
                     </div>
                     <div class="itemBottom">
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo</p>
+                        <p>
+                            根据拍摄人物，制定详细的拍摄工作计划与时间安排；<br>
+                            根据工作需要，挑选合适的摄影设备；<br>
+                            根据导演要求，运用摄影艺术手段完成影视片的电影造型；<br>
+                            在完成拍摄任务的整个过程中，与拍摄小组其他成员紧密协作；<br>
+                            与被拍摄者沟通，以达到快速进入拍摄状态的效果。
+                        </p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="itemLeft" style="">
+                        <div class="itemDate">
+                            2011.01-2013.12
+                        </div>
+                        <div class="cusp01"><div class="cusp02"></div></div>
+                    </div>
+                    <div class="itemRight" >
+                        <div>
+                            <h4>才华有限公司</h4>
+                            <h5 style="margin-top: 6px">设计师</h5>
+                        </div>
+                    </div>
+                    <div class="itemBottom">
+                        <p>
+                            根据拍摄人物，制定详细的拍摄工作计划与时间安排；<br>
+                            根据工作需要，挑选合适的摄影设备；<br>
+                            根据导演要求，运用摄影艺术手段完成影视片的电影造型；<br>
+                            在完成拍摄任务的整个过程中，与拍摄小组其他成员紧密协作；<br>
+                            与被拍摄者沟通，以达到快速进入拍摄状态的效果。
+                        </p>
                     </div>
                 </div>
             </div>
@@ -486,11 +577,11 @@
             <div class="contact-right-w3l">
                 <div class="contact-form">
                     <form autocomplete="off">
-                        <input placeholder="企业/公司名称" id="contactCompany" type="text" required="" />
-                        <input placeholder="您的称谓" id="contactName" type="text" required="" />
-                        <input placeholder="联系方式" id="contactContact" type="email" required="" />
-                        <textarea placeholder="留言信息" id="contactMessage" style="min-height: 120px;resize:vertical;" required=""></textarea>
-                        <input type="button" value="提交" >
+                        <input placeholder="企业/公司名称" id="contact-company" type="text" required="" />
+                        <input placeholder="您的称谓" id="contact-name" type="text" required="" />
+                        <input placeholder="联系方式" id="contact-email" type="email" required="" />
+                        <textarea placeholder="留言信息" id="contact-message" style="min-height: 120px;resize:vertical;" required=""></textarea>
+                        <input id="sendMessage" type="button" value="提交" >
                     </form>
                 </div>
             </div>
@@ -517,8 +608,8 @@
         </div>
     </div>
 
-    <div id="submitTip" style="width: 100%;height: 135px;text-align: center;position: fixed;bottom: 0px;background:#333333;z-index: 1047;display: none;">
-        <div id="footerTip" style="color: #ffffff;font-size: 20px;margin-top: 35px;">提交已填写信息即可在线查看简历</div>
+    <div id="submitTip">
+        <div id="footerTip" style="color: #ffffff;font-size: 20px;margin-top: 35px;">提交已填写信息即可查看分享简历</div>
         <button id="submit" class="btn btn-primary" onclick="submit()" style="margin-top: 6px;background: #6397ff">上传信息</button>
     </div>
 
@@ -852,7 +943,7 @@
             //生成二维码
             makeCode();
             //设置主题颜色
-            localStorage.setItem("theme",resume.Theme);
+            localStorage.setItem("theme",resume.ThemeColor);
             renderHtml();
         }else{
             $('#qrcodeBtn').remove();
@@ -863,7 +954,20 @@
             var alertInfo = getCookieValue("alertInfo");
             if(!alertInfo&&!dbData){
                 addCookie("alertInfo","alertInfo",7,"/");
-                swal("即刻提示","点击右下角设计按钮即可制作及预览简历","info");
+                swal({
+                    title: "<h3>使用提示</h3>",
+                    text: "<div style='text-align: center'><p>1.点击右下角按钮填入信息即可制作简历</p></br>" +
+                    "<p>2.您若没有账号上传信息可获取登录密钥</p></br>" +
+                    "<p>3.登录系统后建议您马上设置账号及密码</p></br>" +
+                    "<p>4.点击[ 我的制作 ]可查看所有已制作简历</p></br>" +
+                    "<p>5.预览简历可生成简历分享链接及二维码</p></div>",
+                    type: "info",
+                    html:true,
+                    showCancelButton: false,
+                    confirmButtonColor: "#6397ff",
+                    confirmButtonText: "Ok",
+                    closeOnConfirm: true
+                });
             }
         },500);
         //渲染进度条
@@ -930,11 +1034,11 @@
         $("#showObjective2").html(resume.Objective);
         $("#showGender").html(resume.Gender);
         if(resume.Gender==="女"){
-            $('.bg-about').css("background","url(../../static/resume/resume001_/images/about/about01_.jpg)");
+            $('.bg-about').css("background","url(../../static/resume/resume001_/images/about/about01_.jpg) center center");
             $('.bg-about').css("background-size","cover");
             $('.bg-about').css("background-repeat","no-repeat");
         }else{
-            $('.bg-about').css("background","url(../../static/resume/resume001_/images/about/about02_.jpg)");
+            $('.bg-about').css("background","url(../../static/resume/resume001_/images/about/about02_.jpg) center center");
             $('.bg-about').css("background-size","cover");
             $('.bg-about').css("background-repeat","no-repeat");
         }
