--- a/static/css/util.css
+++ b/static/css/util.css
@@ -27,6 +27,17 @@
     width: 100%;
     text-align: center;
     background: #333;
+    padding-bottom: 25px;
+}
+#submitTip{
+    width: 100%;
+    height: 145px;
+    text-align: center;
+    position: fixed;
+    bottom: 0px;
+    background:#333333;
+    z-index: 1047;
+    display: none;
 }
 
 .myMargin{
