--- a/views/main/index.html
+++ b/views/main/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/ico" href="../../static/img/logo/logoPic.png">
     <link rel="stylesheet" href="../../static/css/root.css">
 	<link rel="stylesheet" href="../../static/css/main-index.css">
+    <link href="https://cdn.bootcss.com/bootstrap-slider/10.2.1/css/bootstrap-slider.min.css" rel="stylesheet">
 
 </head>
 
@@ -134,7 +135,7 @@
 	<!-- END WRAPPER -->
 
     <!-- 我的制作-模态框（Modal） -->
-    <div class="modal fade" id="madeModal" style="overflow-y: auto" tabindex="-1"  data-backdrop="static" role="dialog" aria-labelledby="madeModalLabel" aria-hidden="true">
+    <div class="modal fade" id="madeModal" style="overflow-y: auto;z-index: 999" tabindex="-1"  data-backdrop="static" role="dialog" aria-labelledby="madeModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-md">
             <div class="modal-content">
                 <div class="modal-header">
@@ -160,6 +161,13 @@
                                     <input id="editSid" type="hidden">
                                     <input id="editIndex" type="hidden">
                                     <button type="button" id="resetBtn" class="btn btn-danger">一键重置</button>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-3 control-label form-label">主题颜色<span class="red"></span></label>
+                                <div class="col-sm-8">
+                                    <input id="colorInput" class="form-control jscolor {closable:true,closeText:'关闭',padding:20, borderWidth:1}" >
+                                    <span class="help-block"></span>
                                 </div>
                             </div>
                             <div class="form-group">
@@ -410,6 +418,7 @@
     <script src="https://cdn.bootcss.com/bootstrap-slider/10.2.1/bootstrap-slider.min.js"></script>
     <script src="../../static/plugins/citySelect/distpicker.data.js"></script>
     <script src="../../static/plugins/citySelect/distpicker.js"></script>
+    <script src="../../static/plugins/colorPicker/jscolor.js"></script>
 	<script>
 		var userInfo;
 		var token;
