--- a/views/resume/resume001.html
+++ b/views/resume/resume001.html
@@ -555,8 +555,8 @@
     <!--/.CONTENT-WRAP END-->
 </div>
 
-<div id="submitTip" style="width: 100%;height: 200px;text-align: center;position: fixed;bottom: 0px;background:#333333;z-index: 1047;display: none;">
-    <div id="footerTip" style="color: #ffffff;font-size: 23px;margin-top: 70px;">提交已填写信息即可在线查看简历</div>
+<div id="submitTip">
+    <div id="footerTip" style="color: #ffffff;font-size: 23px;margin-top: 70px;">提交已填写信息即可查看分享简历</div>
     <button id="submit" class="btn btn-primary" onclick="submit()" style="margin-top: 6px;background: #6397ff">上传信息</button>
 </div>
 
@@ -878,7 +878,20 @@
             var alertInfo = getCookieValue("alertInfo");
             if(!alertInfo&&!dbData){
                 addCookie("alertInfo","alertInfo",7,"/");
-                swal("即刻提示","点击右下角设计按钮即可制作及预览简历","info");
+                swal({
+                    title: "<h3>使用提示</h3>",
+                    text: "<div style='text-align: center'><p>1.点击右下角按钮填入信息即可制作简历</p></br>" +
+                    "<p>2.您若没有账号上传信息可获取登录密钥</p></br>" +
+                    "<p>3.登录系统后建议您马上设置账号及密码</p></br>" +
+                    "<p>4.点击[ 我的制作 ]可查看所有已制作简历</p></br>" +
+                    "<p>5.预览简历可生成简历分享链接及二维码</p></div>",
+                    type: "info",
+                    html:true,
+                    showCancelButton: false,
+                    confirmButtonColor: "#6397ff",
+                    confirmButtonText: "Ok",
+                    closeOnConfirm: true
+                });
             }
         },500);
 
@@ -898,7 +911,7 @@
         $("#showObjective").html(resume.Objective);
         $("#showGender").html(resume.Gender);
         if(resume.Gender==="女"){
-            $('.bg-about').css("background","url(../../static/resume/resume001/images/about/about01_.jpg)");
+            $('.bg-about').css("background","url(../../static/resume/resume001/images/about/about01_.jpg) center center");
             $('.bg-about').css("background-size","cover");
             $('.bg-about').css("background-repeat","no-repeat");
         }
@@ -997,7 +1010,7 @@
             edus = JSON.parse(edus);
         }
         //edus = edus.reverse();
-        $('.showEduWrap').html("");
+        $('.showEduWrap').html("暂未填写");
         for(var i=0;i<edus.length;i++){
             var obj = edus[i];
             var start = obj.start;
