--- a/views/resume/resume001.html
+++ b/views/resume/resume001.html
@@ -818,7 +818,7 @@
 <a href="javascript:void(0)" class="scroll-top" style="bottom: 80px;display: none" id="qrcodeBtn"><i class="fa fa-qrcode" aria-hidden="true"></i></a>
 
 <!--设计按钮-->
-<a href="javascript:void(0)" class="scroll-top" style="bottom: 80px;" id="design"><img style="width: 24px;margin-top: -10px;" src="../../static/img/design.png"></a>
+<a href="javascript:void(0)" class="scroll-top" style="bottom: 80px;" id="design"><i class="fa fa-scissors" aria-hidden="true"></i></a>
 
 <!--返回顶部-->
 <a href="javascript:void(0)" class="scroll-top" id="scroll-top"><i class="fa fa-angle-up" aria-hidden="true"></i></a>
